[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/tower.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 100.0

[node name="Tower" type="Area2D"]
collision_mask = 4
script = ExtResource( 1 )
SHOT_RADIUS = 50.0

[node name="RangeArea" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="BarrelPos" type="Position2D" parent="."]

[connection signal="area_entered" from="." to="." method="_on_Tower_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Tower_area_exited"]
